# cadical

./: CMakeLists.txt
